flux/cluster/cockpit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cockpit-service
  namespace: cockpit
spec:
  type: ExternalName
  externalName: host.k3s.internal
  ports:
    - port: 80
      targetPort: 9090
