flux/cluster/cockpit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cockpit-ingress
  namespace: cockpit
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: sso-keycloak-auth@kubernetescrd
spec:
  rules:
    - host: cockpit.nobeledgar3.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cockpit-service
                port:
                  number: 80
